# Bet-Assistant

./: .gitignore  .vercelignore  README.md  app.py  conftest.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: analyze.py
bet_assistant/: __init__.py  cli.py  config.py  demo.py  language.py  pipeline.py
bet_assistant/backtest/: __init__.py  calibration.py  engine.py  metrics.py
bet_assistant/bankroll/: __init__.py  manager.py  responsible.py
bet_assistant/data/: __init__.py  apibasketball.py  apifootball.py  apitennis.py  history.py  http.py  providers.py  schema.py
bet_assistant/models/: __init__.py  base.py  elo.py  glicko.py  logistic.py  mathutils.py  poisson.py
bet_assistant/odds/: __init__.py  kelly.py  value.py  vig.py
public/: index.html
scripts/: devserver.py
tests/: test_apibasketball_tennis.py  test_apifootball.py  test_app.py  test_backtest.py  test_demo.py  test_guarantees.py  test_history.py  test_models.py  test_odds.py  test_persistence.py
