[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bet-assistant"
version = "0.1.0"
description = "A value-betting analysis tool (not a prediction oracle) for football, basketball and tennis."
readme = "README.md"
requires-python = ">=3.10"
# No third-party runtime dependencies — pure standard library by design.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
bet-assistant = "bet_assistant.cli:main"

[tool.setuptools.packages.find]
include = ["bet_assistant*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
